--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "nodemon server.js"
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -19,7 +19,8 @@
   "license": "ISC",
   "dependencies": {
     "colors": "^1.1.2",
-    "mime": "^1.3.4"
+    "mime": "^1.3.4",
+    "mongodb": "^2.2.26"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
