--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "postinstall": "./node_modules/bower/bin/bower install"
   },
   "repository": {
     "type": "git",
@@ -20,7 +21,8 @@
   "dependencies": {
     "colors": "^1.1.2",
     "mime": "^1.3.4",
-    "mongodb": "^2.2.26"
+    "mongodb": "^2.2.26",
+    "bower": "^1.7.9"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
